# tg_drop_bot

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Caddyfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_giveaway_title.py  0003_rename_groups_to_channels.py
src/tg_drop_bot/: __main__.py  config.py  main.py
src/tg_drop_bot/bot/: admin.py  app.py  channel.py  group.py  keyboards.py  participant.py  rate_limit.py  states.py
src/tg_drop_bot/db/: __init__.py  middleware.py  models.py  session.py
src/tg_drop_bot/services/: access.py  captcha.py  conditions.py  csv_export.py  dates.py  giveaways.py  rate_limit.py  rendering.py  scheduler.py  telegram.py
tests/: test_access.py  test_admin.py  test_captcha.py  test_conditions.py  test_config.py  test_dates.py  test_db_integration.py  test_giveaways.py  test_keyboards.py  test_localization.py  test_rendering.py  test_telegram.py
