[project]
name = "tg-drop-bot"
version = "0.3.0"
description = "Telegram giveaway bot with admin panel, captcha, PostgreSQL, and Docker deploy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4.0",
    "aiohttp>=3.9,<4.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "captcha>=0.6,<1.0",
    "pydantic-settings>=2.4,<3.0",
    "python-dotenv>=1.0,<2.0",
    "redis>=5.0,<6.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "tzdata>=2025.2",
]

[project.scripts]
tg-drop-bot = "tg_drop_bot.main:run"

[dependency-groups]
dev = [
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.7,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_drop_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
